<resources>
    <string name="app_name">Ejemplos_RelativeLayout</string>
    <string name="app_name_v2">Ejemplos_RelativeLayout_v2</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn10">10</string>
    <string name="btnLorem">Lorem</string>
    <string name="btnIpsum">Ipsum</string>
</resources>