<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_v2"
        android:textColor="@color/white"
        android:background="@color/purple"/>

    <Button
        android:id="@+id/btnTurquesa"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/btn1"
        android:textColor="@color/white"
        android:backgroundTint="@color/turquoise"
        android:layout_below="@id/title"/>

    <Button
        android:id="@+id/btnAmarillo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/btn2"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/white"
        android:layout_below="@id/btnTurquesa"/>

    <Button
        android:id="@+id/btnRojo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/btn3"
        android:textColor="@color/white"
        android:backgroundTint="#0F0"
        android:layout_toRightOf="@+id/btnTurquesa"
        android:layout_below="@id/title"/>

    <Button
        android:id="@+id/btnCian"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/btn4"
        android:textColor="@color/white"
        android:backgroundTint="@color/cyan"
        android:layout_alignBottom="@+id/btnAmarillo"/>

    <Button
        android:id="@+id/btnVerde"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/btn5"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        android:layout_alignBottom="@+id/btnAmarillo"
        android:layout_toRightOf="@+id/btnAmarillo"/>

    <Button
        android:id="@+id/btnRosa"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/btn6"
        android:textColor="@color/white"
        android:backgroundTint="@color/pink"
        android:layout_below="@+id/btnVerde"
        android:layout_toRightOf="@+id/btnCian"/>

    <Button
        android:id="@+id/btnMalva"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/btn7"
        android:textColor="@color/white"
        android:backgroundTint="@color/mauve"
        android:layout_below="@+id/btnRosa"
        android:layout_toRightOf="@+id/btnCian"/>

    <Button
        android:id="@+id/btnPurpura"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/btn8"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"
        android:layout_below="@+id/btnMalva"/>

    <Button
        android:id="@+id/btnNegro"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn9"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:layout_toRightOf="@+id/btnPurpura"
        android:layout_alignBottom="@+id/btnPurpura"/>

    <Button
        android:id="@+id/btnGris"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/btn10"
        android:textColor="@color/white"
        android:backgroundTint="@color/gray"
        android:layout_toRightOf="@+id/btnNegro"
        android:layout_below="@+id/btnMalva"/>

    <Button
        android:id="@+id/btnLorem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:text="@string/btnLorem"
        android:textColor="@color/white"
        android:backgroundTint="@color/cyan"
        android:layout_below="@+id/btnGris"/>

    <Button
        android:id="@+id/btnIpsum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnIpsum"
        android:textColor="@color/white"
        android:backgroundTint="@color/yellow"
        android:layout_alignBaseline="@+id/btnLorem"
        android:layout_toRightOf="@+id/btnLorem"/>

</RelativeLayout>